tests/error/tailList-wrong-argument.uplc
(program 0.0.0 [(force (builtin tailList)) (con integer 1)])